src/test/deca/context/invalid/created/test-a-18.deca
class A{
}

class B extends A{
    protected int z;
    int w;
}

class C extends A{
    int m;
    B b;
    protected int w;
    void SetX(){
        b.z = 5;
    }
}

{
    C a ;
    a.SetX();
}